[gd_scene load_steps=9 format=3 uid="uid://cwpgl874cc2at"]

[ext_resource type="Texture2D" uid="uid://dbuui4ryxtfyg" path="res://content/assets/rope/rope.png" id="1_0756u"]
[ext_resource type="Script" uid="uid://cyk4ywo0lum" path="res://rope.gd" id="1_nmccy"]
[ext_resource type="AudioStream" uid="uid://dv3xlp6oo3aby" path="res://content/assets/music/connected_clothes.mp3" id="4_id5n5"]
[ext_resource type="PackedScene" uid="uid://bfnl3gc1xpbgd" path="res://clothes_common.tscn" id="4_qe201"]
[ext_resource type="AudioStream" uid="uid://d4dban3lj7tiu" path="res://content/assets/music/completed_clothes.mp3" id="5_x76su"]

[sub_resource type="Curve2D" id="Curve2D_id5n5"]
bake_interval = 0.01
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 16.3623, 10.2614, 0, 0, 0, 0, 240.972, 11.2876, 0, 0, 0, 0, 374.845, 18.4706, 0, 0, 0, 0, 548.88, 32.8366, 0, 0, 0, 0, 661.95, 56.4819, 0, 0, 0, 0, 696.911, 75.8831, 0, 0, 0, 0, 721.883, 90.1487, 0, 0, 0, 0, 739.364, 109.55, 0, 0, 0, 0, 724.381, 130.092, 0, 0, 0, 0, 691.917, 149.493, 0, 0, 0, 0, 651.961, 164.9, 0, 0, 0, 0, 534.591, 188.296, 0, 0, 0, 0, 309.396, 207.281, 0, 0, 0, 0, 214.197, 215.49, 0, 0, 0, 0, 98.1736, 232.935, 0, 0, 0, 0, 34.2121, 256.536, 0, 0, 0, 0, 8.9249, 283.216, 0, 0, 0, 0, 47.5994, 314, 0, 0, 0, 0, 105.611, 335.549, 0, 0, 0, 0, 214.197, 359.15, 0, 0, 0, 0, 395.669, 380.699, 0, 0, 0, 0, 529.412, 394.301, 0, 0, 0, 0, 690.484, 417.126, 0, 0, 0, 0, 734.37, 436.517, 0, 0, 0, 0, 777.887, 454.216, 0, 0, 0, 0, 796.8, 466.76, 0, 0, 0, 0, 804.292, 482.167, 0, 0, 0, 0, 789.309, 493.009, 0, 0, 0, 0, 725.445, 516.985, 0, 0, 0, 0, 599.454, 551.039, 0, 0, 0, 0, 431.369, 568.484, 0, 0, 0, 0, 297.496, 580.797, 0, 0, 0, 0, 163.623, 597.216, 0, 0, 0, 0, 68.4241, 610.556)
}
point_count = 34

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jry5w"]
size = Vector2(28, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qe201"]
size = Vector2(71, 82.0551)

[node name="Rope" type="Node2D"]
script = ExtResource("1_nmccy")
clothes_common_scene = ExtResource("4_qe201")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(346, 570.011)
scale = Vector2(0.82731, 1.06158)
texture = ExtResource("1_0756u")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(8, 48.8551)
scale = Vector2(0.800888, 1.67081)
curve = SubResource("Curve2D_id5n5")

[node name="GameOverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea"]
position = Vector2(64, 1069)
shape = SubResource("RectangleShape2D_jry5w")

[node name="ConnectedMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_id5n5")

[node name="CompletedMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x76su")

[node name="HelpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HelpArea"]
position = Vector2(602, 739)
shape = SubResource("RectangleShape2D_qe201")

[connection signal="comleted_clothes" from="." to="." method="_on_comleted_clothes"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="GameOverArea" to="." method="_on_game_over_area_area_entered"]
[connection signal="area_entered" from="HelpArea" to="." method="_on_help_area_area_entered"]
